Complete airports crud

--- a/BD2_Project/Airplanes/templates/Airplanes/airport_list.html
+++ b/BD2_Project/Airplanes/templates/Airplanes/airport_list.html
@@ -1,3 +1,15 @@
 {% extends 'base.html' %} {% block content %} {% for airport in airport_list %}
-<p>{{airport.name}}</p>
-{% endfor %} {% endblock %}
+<p>
+  <a href="{% url 'airports:airport_detail' airport.id  %}">{{airport.name}}</a>
+</p>
+
+<p>
+  <a href="{% url 'airports:airport_update' airport.id  %}">Edit</a>
+</p>
+<p>
+  <a href="{% url 'airports:airport_delete' airport.id  %}">Delete</a>
+</p>
+{% endfor %}
+
+<a href="{% url 'airports:airport_create' %}">Add Airport</a>
+{% endblock %}
