--- a/BD2_Project/Airplanes/templates/Airplanes/plane_form.html
+++ b/BD2_Project/Airplanes/templates/Airplanes/plane_form.html
@@ -20,7 +20,7 @@
           type="submit"
           class="btn btn-danger btn-lg"
           style="margin-top: 30px"
-          onclick="window.location='{% url 'airplanes:all_airports' %}'; return false;"
+          onclick="window.location='{% url 'airplanes:all_planes' %}'; return false;"
           value="Cancel"
         />
       </div>
