--- a/BD2_Project/Airplanes/templates/Airplanes/plane_detail.html
+++ b/BD2_Project/Airplanes/templates/Airplanes/plane_detail.html
@@ -2,7 +2,7 @@
 
 <div class="container mt-5" style="width: 70%">
   <div class="col">
-    <h1 class="text-center">Airport Details</h1>
+    <h1 class="text-center">Plane Details</h1>
     <div class="d-flex justify-content-center">
       <table class="table table-striped mt-5" style="width: 50%">
         <thead>
@@ -12,7 +12,7 @@
           </tr>
         </thead>
         <tbody>
-          {% for label, value in airport.get_fields %}
+          {% for label, value in plane.get_fields %}
           <tr>
             <td>{{label | upper}}</td>
             <td>{{value}}</td>
@@ -24,7 +24,7 @@
 
     <div class="d-flex justify-content-center">
       <a
-        href="{% url 'airplanes:all_airports' %}"
+        href="{% url 'airplanes:all_planes' %}"
         class="d-block btn btn-primary btn-lg my-5"
         >BACK</a
       >
