Fixed flights creation

--- a/BD2_Project/templates/base.html
+++ b/BD2_Project/templates/base.html
@@ -41,6 +41,14 @@
               >
             </li>
 
+            <li class="nav-item active">
+              <a
+                class="nav-link active"
+                href="{% url 'airplanes:all_flights' %}"
+                >flights</a
+              >
+            </li>
+
             <!-- 
                     
                 
