Added persons and reservations

--- a/BD2_Project/templates/base.html
+++ b/BD2_Project/templates/base.html
@@ -49,6 +49,22 @@
               >
             </li>
 
+            <li class="nav-item active">
+              <a
+                class="nav-link active"
+                href="{% url 'airplanes:all_passengers' %}"
+                >passengers</a
+              >
+            </li>
+
+            <li class="nav-item active">
+              <a
+                class="nav-link active"
+                href="{% url 'airplanes:all_reservations' %}"
+                >reservations</a
+              >
+            </li>
+
             <!-- 
                     
                 
