create home.html as default app view and move airports to airport url

--- a/BD2_Project/templates/base.html
+++ b/BD2_Project/templates/base.html
@@ -25,8 +25,9 @@
           class="d-flex justify-content-between px-5 mx-auto"
           style="width: 80%"
         >
-          <span class="navbar-text text-white">DJANGO C.R.U.D.</span>
+          <span class="navbar-text text-white"><a class="nav-link active" href="{% url 'airplanes:home' %}">DJANGO C.R.U.D.</a></span>
           <ul class="navbar-nav mr-auto">
+
             <li class="nav-item active">
               <a
                 class="nav-link active"
