add user auth and some stuff

--- a/BD2_Project/templates/base.html
+++ b/BD2_Project/templates/base.html
@@ -64,6 +64,13 @@
                 >reservations</a
               >
             </li>
+              <li class="nav-item active">
+              <a
+                class="nav-link active"
+                href="{% url 'airplanes:login' %}"
+                >LOGIN</a
+              >
+            </li>
 
             <!-- 
                     
