--- a/BD2_Project/Airplanes/templates/Airplanes/flight_list.html
+++ b/BD2_Project/Airplanes/templates/Airplanes/flight_list.html
@@ -1,15 +1,25 @@
-{% extends 'base.html' %} {% block content %} {% for flight in flight_list %}
-<p>
-  <a href="{% url 'airplanes:flight_detail' flight.id  %}">{{flight.name}}</a>
-</p>
+{% extends 'base.html' %}
+{% block content %}
 
-<p>
-  <a href="{% url 'airplanes:flight_update' flight.id  %}">Edit</a>
-</p>
-<p>
-  <a href="{% url 'airplanes:flight_delete' flight.id  %}">Delete</a>
-</p>
-{% endfor %}
+<div style="margin-top: 30px;" class="container">
+  <h1 class="mb-5">Flights</h1>
 
-<a href="{% url 'airplanes:flight_create' %}">Add flight</a>
+  {% for flight in flight_list %}
+    <div class="card mb-3">
+      <div class="card-body d-flex align-items-center justify-content-between">
+        <h5 class="card-title mb-0">
+          <a href="{% url 'airplanes:flight_detail' flight.id %}">
+            {{ flight.name }}
+          </a>
+        </h5>
+        <div>
+          <a href="{% url 'airplanes:flight_update' flight.id %}" class="btn btn-primary">Edit</a>
+          <a href="{% url 'airplanes:flight_delete' flight.id %}" class="btn btn-danger ml-2">Delete</a>
+        </div>
+      </div>
+    </div>
+  {% endfor %}
+
+  <a href="{% url 'airplanes:flight_create' %}" class="btn btn-success">Add Flight</a>
+</div>
 {% endblock %}
