--- a/BD2_Project/Airplanes/templates/Airplanes/passenger_list.html
+++ b/BD2_Project/Airplanes/templates/Airplanes/passenger_list.html
@@ -1,18 +1,24 @@
-{% extends 'base.html' %} {% block content %} {% for pass in passenger_list %}
-<p>
-  <a href="{% url 'airplanes:passenger_detail' pass.id  %}"
-    >{{pass.firstname}}</a
-  >
-</p>
+{% extends 'base.html' %}
+{% block content %}
+<div style="margin-top: 30px;" class="container">
+  <h1 class="mb-5">Passengers</h1>
 
-<p>
-  <a href="{% url 'airplanes:passenger_update' pass.id  %}">Edit</a>
-</p>
-<p>
-  <a href="{% url 'airplanes:passenger_delete' pass.id  %}">Delete</a>
-</p>
+  {% for pass in passenger_list %}
+    <div class="card mb-3">
+      <div class="card-body d-flex align-items-center justify-content-between">
+        <h5 class="card-title mb-0">
+          <a href="{% url 'airplanes:passenger_detail' pass.id %}">
+            {{ pass.firstname }} {{ pass.surname }}
+          </a>
+        </h5>
+        <div>
+          <a href="{% url 'airplanes:passenger_update' pass.id %}" class="btn btn-primary">Edit</a>
+          <a href="{% url 'airplanes:passenger_delete' pass.id %}" class="btn btn-danger ml-2">Delete</a>
+        </div>
+      </div>
+    </div>
+  {% endfor %}
 
-{% endfor %}
-
-<a href="{% url 'airplanes:passenger_create' %}">Add Passenger</a>
+  <a href="{% url 'airplanes:passenger_create' %}" class="btn btn-success">Add Passenger</a>
+</div>
 {% endblock %}
