--- a/BD2_Project/Airplanes/templates/Airplanes/plane_list.html
+++ b/BD2_Project/Airplanes/templates/Airplanes/plane_list.html
@@ -1,15 +1,24 @@
-{% extends 'base.html' %} {% block content %} {% for plane in plane_list %}
-<p>
-  <a href="{% url 'airplanes:plane_detail' plane.id  %}">{{plane.name}}</a>
-</p>
+{% extends 'base.html' %}
+{% block content %}
 
-<p>
-  <a href="{% url 'airplanes:plane_update' plane.id  %}">Edit</a>
-</p>
-<p>
-  <a href="{% url 'airplanes:plane_delete' plane.id  %}">Delete</a>
-</p>
-{% endfor %}
+<div style="margin-top: 30px;" class="container">
+  <h1 class="mb-5">Planes</h1>
+  {% for plane in plane_list %}
+    <div class="card mb-3">
+      <div class="card-body d-flex align-items-center justify-content-between">
+        <h5 class="card-title mb-0">
+          <a href="{% url 'airplanes:plane_detail' plane.id %}">
+            {{ plane.name }}
+          </a>
+        </h5>
+        <div>
+          <a href="{% url 'airplanes:plane_update' plane.id %}" class="btn btn-primary">Edit</a>
+          <a href="{% url 'airplanes:plane_delete' plane.id %}" class="btn btn-danger ml-2">Delete</a>
+        </div>
+      </div>
+    </div>
+  {% endfor %}
+<a href="{% url 'airplanes:plane_create' %}" class="btn btn-success">Add Plane</a>
 
-<a href="{% url 'airplanes:plane_create' %}">Add Plane</a>
+</div>
 {% endblock %}
