--- a/BD2_Project/templates/base.html
+++ b/BD2_Project/templates/base.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <div class="container-fluid">
+    <div style="padding: 0" class="container-fluid">
       <!-- NAVIGATION BAR -->
 
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
