--- a/BD2_Project/templates/base.html
+++ b/BD2_Project/templates/base.html
@@ -73,6 +73,14 @@
               >
             </li>
 
+            <li class="nav-item active">
+              <a
+                class="nav-link active"
+                href="{% url 'airplanes:register' %}"
+                >REGISTER</a
+              >
+            </li>
+
             <!-- 
                     
                 
