--- a/BD2_Project/Airplanes/templates/flight_search_results.html
+++ b/BD2_Project/Airplanes/templates/flight_search_results.html
@@ -3,7 +3,12 @@
 
 <ul>
   {% for flight in flights %}
-  <li>{{ flight.name }}, {{ flight.id }}</li>
+  <li>
+    {% for label, value in flight.get_fields %}
+    <p>{{ label }}: {{ value }}</p>
+    <p />
+    {% endfor %}
+  </li>
   {% endfor %}
 </ul>
 {% endblock %}
