--- a/BD2_Project/Airplanes/templates/Airplanes/profile_detail.html
+++ b/BD2_Project/Airplanes/templates/Airplanes/profile_detail.html
@@ -12,12 +12,20 @@
           </tr>
         </thead>
         <tbody>
-          {% for label, value in passenger.get_fields %}
+          {% for label, value in profile.get_fields %}
           <tr>
             <td>{{label | upper}}</td>
             <td>{{value}}</td>
           </tr>
           {% endfor %}
+          <tr>
+            <td>FIRST NAME</td>
+            <td>{{ user.first_name }}</td>
+          </tr>
+          <tr>
+            <td>LAST NAME</td>
+            <td>{{ user.last_name }}</td>
+          </tr>
         </tbody>
       </table>
     </div>
