--- a/BD2_Project/Airplanes/templates/Airplanes/profile_list.html
+++ b/BD2_Project/Airplanes/templates/Airplanes/profile_list.html
@@ -3,12 +3,12 @@
 <div style="margin-top: 30px;" class="container">
   <h1 class="mb-5">Passengers</h1>
 
-  {% for pass in passenger_list %}
+  {% for pass in profile_list %}
     <div class="card mb-3">
       <div class="card-body d-flex align-items-center justify-content-between">
         <h5 class="card-title mb-0">
           <a href="{% url 'airplanes:passenger_detail' pass.id %}">
-            {{ pass.firstname }} {{ pass.surname }}
+            {{ pass.user.first_name }} {{ pass.user.last_name }}
           </a>
         </h5>
         <div>
