reservation list search

--- a/BD2_Project/Airplanes/templates/flight_search.html
+++ b/BD2_Project/Airplanes/templates/flight_search.html
@@ -3,13 +3,13 @@
 <div style="margin-top: 30px;" class="container">
 
 <form action="/result" method="get">
-  <h1>Wylot z:</h1>
+  <h3>Departure from:</h3>
   <input name="departure" type="text" id="departure" />
-  <h1>Przylot do:</h1>
+  <h3>Arrival to:</h3>
   <input name="arrival" type="text" id="arrival" />
-  <h1>Data wylotu:</h1>
-  <input name="start_date" type="datetime-local" id="start_date" />
-  <h1>Data przylotu:</h1>
+  <h3>Departure time:</h3>
+  <input name="start_date" type="datetime-local" id="start_date" value=""/>
+  <h3>Arrival time:</h3>
   <input name="end_date" type="datetime-local" id="end_date" />
   <button type="submit" name="submit">Submit</button>
 </form>
@@ -36,6 +36,18 @@
       $(this).autocomplete("search");
     });
   });
+
+  window.addEventListener('load', () => {
+      var now = new Date();
+      now.setMinutes(now.getMinutes() - now.getTimezoneOffset());
+      now.setMilliseconds(null)
+    now.setSeconds(null)
+
+
+  document.getElementById('start_date').value = now.toISOString().slice(0, -1);
+      now.setFullYear(now.getFullYear()+1);
+  document.getElementById('end_date').value = now.toISOString().slice(0, -1);
+  })
 </script>
 
 </div>
